[gd_scene load_steps=4 format=3 uid="uid://d1e7gwqtwa7gu"]

[ext_resource type="Script" path="res://scenes/test.gd" id="1_mmjej"]
[ext_resource type="Theme" uid="uid://3q7c2jbud5kx" path="res://new_theme.tres" id="2_a2bbp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8aj1"]
bg_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mmjej")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y8aj1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a2bbp")
theme_override_font_sizes/font_size = 36
text = "Godot VOSK GDExtension"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ModelPath" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "bin/models/vosk-model-small-en-us-0.15"
placeholder_text = "path/to/model"

[node name="Listen" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_a2bbp")
text = "START LISTENING"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Partial" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a2bbp")
text = "Partial text:"
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="PartialRich" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "PARTIAL TEXT GOES HERE"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="Final" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
theme = ExtResource("2_a2bbp")
text = "Final text:"
vertical_alignment = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="FinalRich" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "FINAL TEXT GOES HERE"
